modified:   rsnapshot/rsnapshot-wrapper.conf 	rsnapshot-wrapper.conf update
	Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/rsnapshot/rsnapshot-wrapper.conf
+++ b/rsnapshot/rsnapshot-wrapper.conf
@@ -2,22 +2,29 @@
 # /usr/local/etc/rsnapshot-wrapper.conf
 #
 CONFDIR=/etc/rsnapshot
-LOG=/var/log/rsnapshot/rsnapshot-wrapper.log
+    LOG=/var/log/rsnapshot/rsnapshot-wrapper.log
 PIDFILE=/var/run/rsnapshot-wrapper.pid
-NICE=5
+   NICE=5
+
+# Specify mountmounts to be (re)mounted
+MOUNTPOINTS="/mnt/vault0 /mnt/vault1"
 
 preexec() {
-MP=/mnt/vault
-$DEBUG mount -o remount,rw "$MP"
-if [ ! $? = 0 ]; then
-	log "**** $MP could not be mounted rw!" 1
-fi
+for m in $MOUNTPOINTS; do
+	$DEBUG mount -o remount,rw "$m"
+	if [ ! $? = 0 ]; then
+		log "**** $m could not be mounted rw!" 1
+		break
+	fi
+done
 }
 
 postexec() {
-MP=/mnt/vault
-$DEBUG mount -o remount,ro "$MP"
-if [ ! $? = 0 ]; then
-	log "**** $MP could not be mounted ro!" 1
-fi
+for m in $MOUNTPOINTS; do
+	$DEBUG mount -o remount,ro "$m"
+	if [ ! $? = 0 ]; then
+		log "**** $m could not be mounted ro!" 1
+		break
+	fi
+done
 }
