modified:   rsnapshot/rsnapshot-wrapper.conf 	Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/rsnapshot/rsnapshot-wrapper.conf
+++ b/rsnapshot/rsnapshot-wrapper.conf
@@ -7,7 +7,7 @@ PIDFILE=/var/run/rsnapshot-wrapper.pid
    NICE=5
 
 # Specify mountmounts to be (re)mounted
-MOUNTPOINTS="/mnt/vault0 /mnt/vault1"
+MOUNTPOINTS="/mnt/a /mnt/b"
 
 preexec() {
 for m in $MOUNTPOINTS; do
