modified:   rsnapshot/rsnapshot-wrapper.conf 	Add an example for Solaris/ZFS pre/postexec
	Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/rsnapshot/rsnapshot-wrapper.conf
+++ b/rsnapshot/rsnapshot-wrapper.conf
@@ -6,12 +6,14 @@ CONFDIR=/etc/rsnapshot
 PIDFILE=/var/run/rsnapshot-wrapper.pid
    NICE=5
 
-# Specify mountmounts to be (re)mounted
+# Custom preexec/postexec scripts one might make use of.
+# Examples:
 MOUNTPOINTS="/mnt/a /mnt/b"
-
 preexec() {
 for m in $MOUNTPOINTS; do
+	# Linux, Solaris
 	$DEBUG mount -o remount,rw "$m"
+#	$DEBUG zfs mount -o remount,rw "$m"
 	if [ ! $? = 0 ]; then
 		log "**** $m could not be mounted rw!" 1
 		break
@@ -21,7 +23,9 @@ done
 
 postexec() {
 for m in $MOUNTPOINTS; do
+	# Linux, Solaris
 	$DEBUG mount -o remount,ro "$m"
+#	$DEBUG zfs mount -o remount,ro "$m"
 	if [ ! $? = 0 ]; then
 		log "**** $m could not be mounted ro!" 1
 		break
