modified:   rsnapshot/rsnapshot-wrapper.conf 	PATH added
	Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/rsnapshot/rsnapshot-wrapper.conf
+++ b/rsnapshot/rsnapshot-wrapper.conf
@@ -1,6 +1,7 @@
 #
 # /usr/local/etc/rsnapshot-wrapper.conf
 #
+   PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/opt/csw/bin
 CONFDIR=/etc/rsnapshot
     LOG=/var/log/rsnapshot/rsnapshot-wrapper.log
 PIDFILE=/var/run/rsnapshot-wrapper.pid
