--- a/rsnapshot/rsnapshot-wrapper.conf
+++ b/rsnapshot/rsnapshot-wrapper.conf
@@ -1,5 +1,5 @@
 #
-# /usr/local/etc/rsnapshot-wrapper.conf
+# rsnapshot-wrapper.conf
 #
    PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/opt/csw/bin
 CONFDIR=/etc/rsnapshot
