--- a/rsnapshot/rsnapshot-wrapper.conf
+++ b/rsnapshot/rsnapshot-wrapper.conf
@@ -1,7 +1,7 @@
 #
 # rsnapshot-wrapper.conf
 #
-   PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/opt/csw/bin
+   PATH=/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin:/opt/csw/bin:/opt/local/bin
 CONFDIR=/etc/rsnapshot
     LOG=/var/log/rsnapshot/rsnapshot-wrapper.log
 PIDFILE=/var/run/rsnapshot-wrapper.pid
