privacy.clearOnShutdown. & privacy.cpd. settings adjusted
modified:   firefox.cfg
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -112,11 +112,23 @@ defaultPref("network.cookie.lifetime.days", 1);
 lockPref("privacy.sanitize.sanitizeOnShutdown", true);
 lockPref("privacy.clearOnShutdown.cache", true);
 lockPref("privacy.clearOnShutdown.cookies", true);
-lockPref("privacy.clearOnShutdown.offlineApps", true);
-lockPref("privacy.clearOnShutdown.sessions", true);
-lockPref("privacy.clearOnShutdown.downloads", false);
+lockPref("privacy.clearOnShutdown.downloads", true);
 lockPref("privacy.clearOnShutdown.formdata", false);
 lockPref("privacy.clearOnShutdown.history", false);
+lockPref("privacy.clearOnShutdown.offlineApps", true);
+lockPref("privacy.clearOnShutdown.passwords", false);
+lockPref("privacy.clearOnShutdown.sessions", true);
+lockPref("privacy.clearOnShutdown.siteSettings", false);
+// Clear on demand
+lockPref("privacy.cpd.cache", true);
+lockPref("privacy.cpd.cookies", true);
+lockPref("privacy.cpd.downloads", true);
+lockPref("privacy.cpd.formdata", false);
+lockPref("privacy.cpd.history", false);
+lockPref("privacy.cpd.offlineApps", true);
+lockPref("privacy.cpd.passwords", false);
+lockPref("privacy.cpd.sessions", true);
+lockPref("privacy.cpd.siteSettings", false);
 
 // http://kb.mozillazine.org/Privacy.donottrackheader.enabled
 //  true - Send information about the user's tracking preferences to all websites. 
