privacy.clearOnShutdown.siteSettings changed to defaultPref modified:   firefox.cfg Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -118,7 +118,8 @@ lockPref("privacy.clearOnShutdown.history", false);
 lockPref("privacy.clearOnShutdown.offlineApps", true);
 lockPref("privacy.clearOnShutdown.passwords", false);
 lockPref("privacy.clearOnShutdown.sessions", true);
-lockPref("privacy.clearOnShutdown.siteSettings", false);
+defaultPref("privacy.clearOnShutdown.siteSettings", false);
+
 // Clear on demand
 lockPref("privacy.cpd.cache", true);
 lockPref("privacy.cpd.cookies", true);
@@ -128,7 +129,7 @@ lockPref("privacy.cpd.history", false);
 lockPref("privacy.cpd.offlineApps", true);
 lockPref("privacy.cpd.passwords", false);
 lockPref("privacy.cpd.sessions", true);
-lockPref("privacy.cpd.siteSettings", false);
+defaultPref("privacy.cpd.siteSettings", false);
 
 // http://kb.mozillazine.org/Privacy.donottrackheader.enabled
 //  true - Send information about the user's tracking preferences to all websites. 
