Firefox "social" and "health report" disabled, I hope modified:   firefox.cfg Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -143,6 +143,7 @@ lockPref("privacy.donottrackheader.enabled", true);
 // Note: privacy.donottrackheader.enabled must be set to "true"
 // 0 - A header stating consent to being tracked is sent to all websites
 // 1 - A header stating the request not to be tracked is sent to all websites
+// ? - No tracking preference header is sent
 lockPref("privacy.donottrackheader.value", 1);
 
 // http://kb.mozillazine.org/Network.http.sendRefererHeader
@@ -296,5 +297,20 @@ lockPref("datareporting.policy.dataSubmissionPolicyBypassAcceptance", false);
 lockPref("toolkit.telemetry.enabled", false);
 lockPref("toolkit.telemetry.prompted", 2);
 lockPref("toolkit.telemetry.rejected", true); 
+
+// https://blog.mozilla.org/blog/2013/05/14/stay-social-with-firefox/
+// https://support.mozilla.org/en-US/questions/942293
+lockPref("social.enabled", false);
+lockPref("social.toast-notifications.enabled", false);
+lockPref("social.manifest.cliqz", "");
+lockPref("social.manifest.facebook", "");
+lockPref("social.manifest.mixi", "");
+lockPref("social.manifest.msnnow", "");
+
+// about:healthreport
+// Delete healthreport.sqlite in your Firefox profile too!
+lockPref("datareporting.healthreport.service.enabled", false);
+lockPref("datareporting.healthreport.uploadEnabled", false);
+lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
 
 // END
