--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -141,9 +141,8 @@ lockPref("privacy.donottrackheader.enabled", true);
 
 // http://kb.mozillazine.org/Privacy.donottrackheader.value
 // Note: privacy.donottrackheader.enabled must be set to "true"
-// 0 - A header stating consent to being tracked is sent to all websites
-// 1 - A header stating the request not to be tracked is sent to all websites
-// ? - No tracking preference header is sent
+// 0 - A header stating consent to being tracked is sent
+// 1 - A header stating the request not to be tracked is sent (default)
 lockPref("privacy.donottrackheader.value", 1);
 
 // http://kb.mozillazine.org/Network.http.sendRefererHeader
