modified:   firefox.cfg browser.newtabpage.enabled set to false Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -66,6 +66,7 @@ defaultPref("browser.sessionstore.restore_on_demand", true);
 // address bar from getting focus?
 // https://support.mozilla.org/en-US/questions/929071
 lockPref("browser.newtab.url", "about:blank");
+lockPref("browser.newtabpage.enabled", "false");
 
 // https://developer.mozilla.org/en-US/docs/Mozilla/Preferences/Preference_reference/browser.pagethumbnails.capturing_disabled
 //  true - The application doesn't create screenshots of visited web pages
