modified:   firefox.cfg The last update gave some JS error... Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -66,7 +66,6 @@ defaultPref("browser.sessionstore.restore_on_demand", true);
 // address bar from getting focus?
 // https://support.mozilla.org/en-US/questions/929071
 lockPref("browser.newtab.url", "about:blank");
-lockPref("browser.newtabpage.enabled", "false");
 
 // https://developer.mozilla.org/en-US/docs/Mozilla/Preferences/Preference_reference/browser.pagethumbnails.capturing_disabled
 //  true - The application doesn't create screenshots of visited web pages
@@ -200,9 +199,9 @@ lockPref("browser.urlbar.formatting.enabled", false);
 
 // Gecko user agent string reference
 // https://developer.mozilla.org/en-US/docs/Gecko_user_agent_string_reference
-// a) defaultPref("general.useragent.override", "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:20.0) Gecko/20100101 Firefox/20.0");
+// a) defaultPref("general.useragent.override", "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:23.0) Gecko/20100101 Firefox/23.0");
 // b) defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:20.0) Gecko/20100101 Firefox/20.0");
-defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:20.0) Gecko/20.0 Firefox/20.0");
+defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:23.0) Gecko/20100101 Firefox/23.0");
 
 // http://kb.mozillazine.org/Browser.tabs.closeButtons
 // 0 - Display a close button on the active tab only 
