Add browser.fixup.alternate.enabled to firefox.cfg Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -190,6 +190,12 @@ lockPref("browser.urlbar.trimURLs", false);
 // false - All parts of the url are given the same color: black
 lockPref("browser.urlbar.formatting.enabled", false);
 
+// http://kb.mozillazine.org/Location_Bar_search
+//  true - Add browser.fixup.alternate.prefix & browser.fixup.alternate.suffix
+//         to "invalid" URLs
+// false - Don't add "www" and ".com" to "invalid" URLs
+lockPref("browser.fixup.alternate.enabled", false);
+
 // How do I go Back/Forward and Pinch to zoom in Firefox using my MacBook Pro?
 // https://support.mozilla.org/en-US/questions/903953
 // lockPref("browser.gesture.swipe.down", NULL);
