Added browser.newtab.preload & browser.newtabpage.enabled modified:   firefox.cfg Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -65,6 +65,8 @@ defaultPref("browser.sessionstore.restore_on_demand", true);
 // When changing "browser.newtab.url" is there any way to prevent the
 // address bar from getting focus?
 // https://support.mozilla.org/en-US/questions/929071
+lockPref("browser.newtab.preload", false);
+lockPref("browser.newtabpage.enabled", false);
 lockPref("browser.newtab.url", "about:blank");
 
 // https://developer.mozilla.org/en-US/docs/Mozilla/Preferences/Preference_reference/browser.pagethumbnails.capturing_disabled
