security.tls.version.min/max added
modified:   firefox.cfg
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -320,4 +320,8 @@ lockPref("datareporting.healthreport.service.enabled", false);
 lockPref("datareporting.healthreport.uploadEnabled", false);
 lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
 
+// http://kb.mozillazine.org/Security.tls.version.*
+defaultPref("security.tls.version.min", 0)
+defaultPref("security.tls.version.max", 3)
+
 // END
