Added security.mixed_content.block_active_content modified:   mozilla/firefox.cfg
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -324,4 +324,9 @@ lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
 defaultPref("security.tls.version.min", 0)
 defaultPref("security.tls.version.max", 3)
 
+// May be needed until #873349 is resolved. The default is true, and rightly so.
+// Add a whitelist for mixed content blocking
+// https://bugzilla.mozilla.org/show_bug.cgi?id=873349
+// defaultPref("security.mixed_content.block_active_content", false);
+
 // END
