* Added network.dns.disablePrefetch to firefox.cfg * Documented pref files for Debian/Iceweasel, see also:   > https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=425961   > iceweasel don't process lockPref settings in   > /etc/iceweasel/pref/iceweasel.js
 README.txt  |    6 +++++-
 firefox.cfg |    4 ++++
 2 files changed, 9 insertions(+), 1 deletion(-)

Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -294,6 +294,10 @@ defaultPref("network.proxy.socks_version", 5);
 // false - Perform DNS lookups on the client
 lockPref("network.proxy.socks_remote_dns", true);
 
+// http://kb.mozillazine.org/Network.dns.disablePrefetch
+// https://trac.torproject.org/projects/tor/wiki/doc/Preventing_Tor_DNS_Leaks
+lockPref("network.dns.disablePrefetch", true);
+
 // https://hg.mozilla.org/mozilla-central/file/tip/services/datareporting
 // https://support.mozilla.org/en-US/questions/954790
 lockPref("datareporting.policy.dataSubmissionEnabled", false);
