Relax browser.download.useDownloadDir and network.http.sendRefererHeader. The latter sometimes has to be set to "2" (the default) so that b0rken sites like chase.com load properly. The alternative is to install the RefControl addon, but there's that usability factor again :-\
modified:   firefox.cfg
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -35,7 +35,7 @@ lockPref("browser.cache.check_doc_frequency", 1);
 // http://kb.mozillazine.org/Unable_to_save_or_download_files
 //  true - Use browser.download.downloadDir (default)
 // false - Do not use browser.download.downloadDir
-lockPref("browser.download.useDownloadDir", false);
+defaultPref("browser.download.useDownloadDir", false);
 
 // http://kb.mozillazine.org/Browser.safebrowsing.enabled
 //  true - Compare visited URLs against a blacklist or submit URLs to a third party
@@ -153,7 +153,7 @@ lockPref("privacy.donottrackheader.value", 1);
 // 2 - Send the Referer header when clicking on a link or loading an image, and set document.referrer for the following page
 // Note: see the RefControl add-on for sending Referer Header on a per-site basis
 //       https://addons.mozilla.org/en-US/firefox/addon/refcontrol/
-lockPref("network.http.sendRefererHeader", 0);
+defaultPref("network.http.sendRefererHeader", 0);
 
 // http://kb.mozillazine.org/Network.http.sendSecureXSiteReferrer
 // Note: network.http.sendRefererHeader must be set to 1 or 2
