--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -97,7 +97,7 @@ defaultPref("layout.spellcheckDefault", 0);
 // 2 - No cookies are allowed
 // 3 - Third-party cookies are allowed only if that site has stored cookies
 //     already from a previous visit 
-lockPref("network.cookie.cookieBehavior", 1);
+defaultPref("network.cookie.cookieBehavior", 1);
 
 // http://kb.mozillazine.org/Network.cookie.lifetimePolicy
 // 0 - The cookie's lifetime is supplied by the server (default)
@@ -216,12 +216,12 @@ defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:23
 // 1 - Display close buttons on all tabs (default)
 // 2 - Don’t display any close buttons
 // 3 - Display a single close button at the end of the tab strip
-lockPref("browser.tabs.closeButtons", 3);
+defaultPref("browser.tabs.closeButtons", 3);
 
 // http://kb.mozillazine.org/About:config_entries#Browser.
 //  true - Open new tabs to the right of the parent tab (default)
 // false - New tabs are opened at the far right of the tabs bar. 
-lockPref("browser.tabs.insertRelatedAfterCurrent", false);
+defaultPref("browser.tabs.insertRelatedAfterCurrent", false);
 
 // http://kb.mozillazine.org/Browser.link.open_newwindow
 // 1 - Open links, that would normally open in a new window, in the current tab/window
@@ -332,5 +332,20 @@ defaultPref("security.tls.version.max", 3)
 // Add a whitelist for mixed content blocking
 // https://bugzilla.mozilla.org/show_bug.cgi?id=873349
 // defaultPref("security.mixed_content.block_active_content", false);
+
+// I usually disable the "Menu bar" in Firefox but it will become visible
+// when the "Alt" key is pressed (ui.key.generalAccessKey et al.). One can
+// disable the "Menu bar" altogether by creating chrome/userChrome.css with the
+// following content:
+//
+// #toolbar-menubar {
+//      display:none !important;
+// }
+//
+// But now the "Menu bar" will be hidden forever. So, lets just disable it
+// when pressing "Alt", it can still be shown via "right-click".
+// http://kb.mozillazine.org/About:config_entries#UI.
+//
+defaultPref("ui.key.menuAccessKeyFocuses", false);
 
 // END
