* Use lockPref on ui.key.menuAccessKeyFocuses Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -346,6 +346,6 @@ defaultPref("security.tls.version.max", 3)
 // when pressing "Alt", it can still be shown via "right-click".
 // http://kb.mozillazine.org/About:config_entries#UI.
 //
-defaultPref("ui.key.menuAccessKeyFocuses", false);
+lockPref("ui.key.menuAccessKeyFocuses", false);
 
 // END
