Don't mess around with general.useragent.override, not woth the hassle. See also: https://panopticlick.eff.org/ modified:   mozilla/firefox.cfg Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -208,8 +208,8 @@ lockPref("browser.fixup.alternate.enabled", false);
 // Gecko user agent string reference
 // https://developer.mozilla.org/en-US/docs/Gecko_user_agent_string_reference
 // a) defaultPref("general.useragent.override", "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:23.0) Gecko/20100101 Firefox/23.0");
-// b) defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:20.0) Gecko/20100101 Firefox/20.0");
-defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:23.0) Gecko/20100101 Firefox/23.0");
+// b) defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:29.0) Gecko/20100101 Firefox/29.0");
+//    defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:30.0) Gecko/20100101 Firefox/30.0");
 
 // http://kb.mozillazine.org/Browser.tabs.closeButtons
 // 0 - Display a close button on the active tab only 
