Disable the annoying "...is now in fullscreen" message in Firefox by setting full-screen-api.approval-required to false. https://support.mozilla.org/en-US/questions/937742
modified:   mozilla/firefox.cfg
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -333,6 +333,10 @@ defaultPref("security.tls.version.max", 3)
 // https://bugzilla.mozilla.org/show_bug.cgi?id=873349
 // defaultPref("security.mixed_content.block_active_content", false);
 
+// Disable the annoying "...is now in fullscreen" message
+// https://support.mozilla.org/en-US/questions/937742
+defaultPref("full-screen-api.approval-required", false);
+
 // I usually disable the "Menu bar" in Firefox but it will become visible
 // when the "Alt" key is pressed (ui.key.generalAccessKey et al.). One can
 // disable the "Menu bar" altogether by creating chrome/userChrome.css with the
