Small formatting and documentation fixes in benchmarks/
 compress-test.sh         |    5 +++++
 cryptsetup_benchmark.sh  |    2 +-
 cryptsetup_ciphertest.sh |    4 +++-
 fs-bench.conf            |    4 +++-
 fs-bench.sh              |    5 ++---
 ssh-features.sh          |   13 +++++++------
 ssh-performance.sh       |    2 +-
 7 files changed, 22 insertions(+), 13 deletions(-)

Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/benchmarks/fs-bench.conf
+++ b/benchmarks/fs-bench.conf
@@ -1,5 +1,7 @@
 #
-# fs-bench.sh
+# (c) 2009-2011 Christian Kujau <lists@nerdbynature.de>
+#
+# fs-bench.conf, to be used by fs-bench.sh
 #
 
 # global options
