--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -328,8 +328,9 @@ lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
 defaultPref("security.tls.version.min", 1)
 defaultPref("security.tls.version.max", 3)
 
-// May be needed until #873349 is resolved. The default is true, and rightly so.
-// Add a whitelist for mixed content blocking
+// Bug #873349 / "Add a whitelist for mixed content blocking" was closed with
+// WONTFIX. However, we still may be able to allow mixed content, especially
+// in coroprate environments.
 // https://bugzilla.mozilla.org/show_bug.cgi?id=873349
 // defaultPref("security.mixed_content.block_active_content", false);
 
