* Adjust mozilla/firefox.cfg for Logjam * Correct permissions of vbox-sysrq.sh
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -328,6 +328,11 @@ lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
 defaultPref("security.tls.version.min", 1)
 defaultPref("security.tls.version.max", 3)
 
+// Disable weak DHE export ciphers
+// https://weakdh.org/sysadmin.html
+defaultPref("security.ssl3.dhe_rsa_aes_128_sha", false)
+defaultPref("security.ssl3.dhe_rsa_aes_256_sha", false)
+
 // Bug #873349 / "Add a whitelist for mixed content blocking" was closed with
 // WONTFIX. However, we still may be able to allow mixed content, especially
 // in coroprate environments.
