Add more settings to firefox.cfg
 firefox.cfg |   49 ++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 42 insertions(+), 7 deletions(-)

Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -1,6 +1,13 @@
 //
 // firefox.cfg
 //
+// TODO:
+// * consolidate & sort entries
+// * re-evaluate settings: are they still used & relevant?
+// * add more settings for better privacy-minded defaults
+// * incorporate e.g.:
+// ** https://wiki.manjaro.org/index.php?title=Firefox_about:config_edits
+// ** https://www.torproject.org/projects/torbrowser/design/#Implementation
 
 // http://kb.mozillazine.org/App.update.auto
 //  true - Download and install updates automatically (default)
@@ -42,6 +49,11 @@ defaultPref("browser.download.useDownloadDir", false);
 //         to determine whether a site is legitimate (default)
 // false - Disable Safe Browsing
 lockPref("browser.safebrowsing.enabled", false);
+lockPref("browser.safebrowsing.downloads.enabled", false);
+lockPref("browser.safebrowsing.gethashURL", "");
+lockPref("browser.safebrowsing.malware.reportURL", "");
+lockPref("browser.safebrowsing.reportURL", "");
+lockPref("browser.safebrowsing.updateURL", "");
 
 // http://kb.mozillazine.org/Browser.safebrowsing.malware.enabled
 //  true - Download data about malware and use it to screen downloads (default)
@@ -68,6 +80,10 @@ defaultPref("browser.sessionstore.restore_on_demand", true);
 lockPref("browser.newtab.preload", false);
 lockPref("browser.newtabpage.enabled", false);
 lockPref("browser.newtab.url", "about:blank");
+lockPref("browser.newtabpage.directory.ping", "");
+lockPref("browser.newtabpage.directory.source", "");
+lockPref("browser.newtabpage.enhanced", false);
+lockPref("browser.newtabpage.introShown", true);
 
 // https://developer.mozilla.org/en-US/docs/Mozilla/Preferences/Preference_reference/browser.pagethumbnails.capturing_disabled
 //  true - The application doesn't create screenshots of visited web pages
@@ -161,9 +177,17 @@ defaultPref("network.http.sendRefererHeader", 0);
 // false - Don't send the Referer header when navigating from a https site to another https site
 lockPref("network.http.sendSecureXSiteReferrer", false);
 
+// http://kb.mozillazine.org/Network.prefetch-next
+lockPref("network.prefetch-next", false);
+
+// How to protect yourself from exposing your IP with WebRTC.
+// https://mullvad.net/en/webrtc/
+lockPref("media.peerconnection.enabled", false);
+
 // Disable Location-Aware Browsing
 // https://www.mozilla.org/en-US/firefox/geolocation/
 lockPref("geo.enabled", false);
+lockPref("geo.wifi.uri", "");
 
 // Privacy-related changes coming to CSS :visited
 // https://hacks.mozilla.org/2010/03/privacy-related-changes-coming-to-css-vistited/
@@ -298,6 +322,12 @@ lockPref("network.proxy.socks_remote_dns", true);
 // https://trac.torproject.org/projects/tor/wiki/doc/Preventing_Tor_DNS_Leaks
 lockPref("network.dns.disablePrefetch", true);
 
+// about:healthreport
+// Delete healthreport.sqlite in your Firefox profile too!
+lockPref("datareporting.healthreport.service.enabled", false);
+lockPref("datareporting.healthreport.uploadEnabled", false);
+lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
+
 // https://hg.mozilla.org/mozilla-central/file/tip/services/datareporting
 // https://support.mozilla.org/en-US/questions/954790
 lockPref("datareporting.policy.dataSubmissionEnabled", false);
@@ -309,20 +339,25 @@ lockPref("toolkit.telemetry.enabled", false);
 lockPref("toolkit.telemetry.prompted", 2);
 lockPref("toolkit.telemetry.rejected", true); 
 
+// https://developer.mozilla.org/en-US/docs/Mozilla/Preferences/Preference_reference/dom.event.clipboardevents.enabled
+defaultPref("dom.event.clipboardevents", false);
+
+// http://kb.mozillazine.org/Dom.storage.enabled
+defaultPref("dom.storage.enabled", false);
+
 // https://blog.mozilla.org/blog/2013/05/14/stay-social-with-firefox/
 // https://support.mozilla.org/en-US/questions/942293
+lockPref("social.directories", "");
 lockPref("social.enabled", false);
-lockPref("social.toast-notifications.enabled", false);
 lockPref("social.manifest.cliqz", "");
 lockPref("social.manifest.facebook", "");
 lockPref("social.manifest.mixi", "");
 lockPref("social.manifest.msnnow", "");
-
-// about:healthreport
-// Delete healthreport.sqlite in your Firefox profile too!
-lockPref("datareporting.healthreport.service.enabled", false);
-lockPref("datareporting.healthreport.uploadEnabled", false);
-lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
+lockPref("social.remote-install.enabled", false);
+lockPref("social.share.activationPanelEnabled", false);
+lockPref("social.shareDirectory", "");
+lockPref("social.toast-notifications.enabled", false);
+lockPref("social.whitelist", "");
 
 // http://kb.mozillazine.org/Security.tls.version.*
 defaultPref("security.tls.version.min", 1)
