Incorporated some settings from https://wiki.manjaro.org/index.php?title=Firefox_about:config_edits
Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -5,9 +5,8 @@
 // * consolidate & sort entries
 // * re-evaluate settings: are they still used & relevant?
 // * add more settings for better privacy-minded defaults
-// * incorporate e.g.:
-// ** https://wiki.manjaro.org/index.php?title=Firefox_about:config_edits
-// ** https://www.torproject.org/projects/torbrowser/design/#Implementation
+// * incorporate settings from https://www.torproject.org/projects/torbrowser/design/#Implementation
+//
 
 // http://kb.mozillazine.org/App.update.auto
 //  true - Download and install updates automatically (default)
@@ -175,7 +174,7 @@ defaultPref("network.http.sendRefererHeader", 0);
 // Note: network.http.sendRefererHeader must be set to 1 or 2
 //  true - Send the Referer header when navigating from a https site to another https site
 // false - Don't send the Referer header when navigating from a https site to another https site
-lockPref("network.http.sendSecureXSiteReferrer", false);
+defaultPref("network.http.sendSecureXSiteReferrer", false);
 
 // http://kb.mozillazine.org/Network.prefetch-next
 lockPref("network.prefetch-next", false);
@@ -392,5 +391,21 @@ defaultPref("full-screen-api.approval-required", false);
 // http://kb.mozillazine.org/About:config_entries#UI.
 //
 lockPref("ui.key.menuAccessKeyFocuses", false);
+
+// http://kb.mozillazine.org/Browser.backspace_action
+// 0 - go back to previous page
+// 1 - page up
+// Any other value will unmap the backspace key.
+defaultPref("browser.backspace_action", 0);
+
+// Test HTML5 videos on YouTube, on a Nightly version of Firefox
+// https://oneanddone.mozilla.org/en-US/tasks/89/
+defaultPref("media.fragmented-mp4.enabled", true);
+defaultPref("media.fragmented-mp4.exposed", true);
+defaultPref("media.fragmented-mp4.ffmpeg.enabled", true);
+defaultPref("media.fragmented-mp4.gmp.enabled", true);
+defaultPref("media.mediasource.enabled", true);
+defaultPref("media.mediasource.mp4.enabled", true);
+defaultPref("media.mediasource.webm.enabled", true);
 
 // END
