--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -5,13 +5,17 @@
 // * consolidate & sort entries
 // * re-evaluate settings: are they still used & relevant?
 // * add more settings for better privacy-minded defaults
-// * incorporate settings from https://www.torproject.org/projects/torbrowser/design/#Implementation
 //
 
 // http://kb.mozillazine.org/App.update.auto
 //  true - Download and install updates automatically (default)
 // false - Ask the user what he wants to do when an update is available 
 lockPref("app.update.auto", false);
+
+// http://kb.mozillazine.org/About:config_entries#Browser.
+//  true - Automatically check for updates to search plugins.
+// false - Don't.
+lockPref("browser.search.update", false);
 
 // http://kb.mozillazine.org/Browser.cache.disk.enable
 //  true - Store cache on the hard drive (default)
@@ -44,20 +48,17 @@ lockPref("browser.cache.check_doc_frequency", 1);
 defaultPref("browser.download.useDownloadDir", false);
 
 // http://kb.mozillazine.org/Browser.safebrowsing.enabled
+// http://kb.mozillazine.org/Browser.safebrowsing.malware.enabled
 //  true - Compare visited URLs against a blacklist or submit URLs to a third party
 //         to determine whether a site is legitimate (default)
 // false - Disable Safe Browsing
 lockPref("browser.safebrowsing.enabled", false);
 lockPref("browser.safebrowsing.downloads.enabled", false);
 lockPref("browser.safebrowsing.gethashURL", "");
+lockPref("browser.safebrowsing.malware.enabled", false);
 lockPref("browser.safebrowsing.malware.reportURL", "");
 lockPref("browser.safebrowsing.reportURL", "");
 lockPref("browser.safebrowsing.updateURL", "");
-
-// http://kb.mozillazine.org/Browser.safebrowsing.malware.enabled
-//  true - Download data about malware and use it to screen downloads (default)
-// false - Do not download malware blacklists and do not check downloads
-lockPref("browser.safebrowsing.malware.enabled", false);
 
 // http://kb.mozillazine.org/Browser.startup.homepage
 lockPref("browser.startup.homepage", "about:");
@@ -99,6 +100,11 @@ defaultPref("browser.download.useToolkitUI", true);
 //  true - Links are underlined by default (default)
 // false - Links are not underlined by default
 defaultPref("browser.underline_anchors", false);
+
+// http://kb.mozillazine.org/Browser.send_pings
+//  true - Send a POST request to URI listed in the ping attribute of <a> HTML elements
+// false - ignore the ping attribute (default)
+defaultPref("browser.send_pings", false);
 
 // http://kb.mozillazine.org/Layout.spellcheckDefault
 // 0 - Disable spellchecker
@@ -276,6 +282,21 @@ defaultPref("browser.link.open_newwindow.restriction", 0);
 // http://kb.mozillazine.org/Issues_related_to_plugins
 defaultPref("plugins.click_to_play", true);
 
+// 0 - never activate
+// 1 - ask to activate
+// 2 - always activate (default)
+defaultPref("plugin.state.flash", 1);
+
+// http://kb.mozillazine.org/Network.http.pipelining
+defaultPref("network.http.pipelining", true);
+defaultPref("network.http.pipelining.aggressive", true);
+defaultPref("network.http.pipelining.ssl", true);
+defaultPref("network.http.proxy.pipelining", true);
+
+// Hacked pref: Now means "Attempt to pipeline at least this many requests together"
+defaultPref("network.http.pipelining.max-optimistic-requests", 3);
+defaultPref("security.ssl.disable_session_identifiers", true);
+
 // http://kb.mozillazine.org/Keyword.enabled
 //  true - If Mozilla cannot determine a URL from information entered in the Location Bar,
 //         append the information to the URL in keyword.URL and redirect the user there (default)
@@ -332,7 +353,7 @@ lockPref("network.dns.disablePrefetch", true);
 // Delete healthreport.sqlite in your Firefox profile too!
 lockPref("datareporting.healthreport.service.enabled", false);
 lockPref("datareporting.healthreport.uploadEnabled", false);
-lockPref("datareporting.healthreport.pendingDeleteRemoteData", true);
+lockPref("datareporting.policy.dataSubmissionEnabled", false);
 
 // https://hg.mozilla.org/mozilla-central/file/tip/services/datareporting
 // https://support.mozilla.org/en-US/questions/954790
