* Enabled dom.storage.enabled again, as disabling it breaks too many websites * Enabled media.peerconnection.enabled again, as disabling it would disable   WebRTC entirely
modified:   mozilla/firefox.cfg

Signed-off-by: Christian Kujau <github@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -177,7 +177,9 @@ lockPref("datareporting.policy.dataSubmissionPolicyBypassAcceptance", false);
 defaultPref("dom.event.clipboardevents", false);
 
 // http://kb.mozillazine.org/Dom.storage.enabled
-defaultPref("dom.storage.enabled", false);
+// Note: disabling this will essentially disable in-browser key-value storage
+// and break many websites. Because of that, we'll leave it enabled for now.
+// defaultPref("dom.storage.enabled", false);
 
 // Disable the annoying "...is now in fullscreen" message
 // https://support.mozilla.org/en-US/questions/937742
@@ -232,7 +234,9 @@ defaultPref("media.mediasource.webm.enabled", true);
 
 // How to protect yourself from exposing your IP with WebRTC.
 // https://mullvad.net/en/webrtc/
-lockPref("media.peerconnection.enabled", false);
+// Note: disabling this will essentially disable WebRTC and
+// we'll leave it enabled for now.
+// defaultPref("media.peerconnection.enabled", false);
 
 // http://kb.mozillazine.org/Network.cookie.cookieBehavior
 // 0 - All cookies are allowed (default)
