Disable the new unified URL bar
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/mozilla/firefox.cfg
+++ b/mozilla/firefox.cfg
@@ -161,6 +161,9 @@ lockPref("browser.urlbar.formatting.enabled", false);
 // false - All parts of the url are shown
 lockPref("browser.urlbar.trimURLs", false);
 
+// Disable the new unified URL bar
+lockPref("browser.urlbar.unifiedcomplete", false);
+
 // about:healthreport
 // Delete healthreport.sqlite in your Firefox profile too!
 lockPref("datareporting.healthreport.service.enabled", false);
